# autodiff

./: .clang-format  .gitignore  CMakeLists.txt  README.md  autodiff.hpp  demo.cpp  main.cpp  test.cpp
examples/: test.cpp  xor.cpp
include/: autodiff.h  autodiff.hpp
src/: autodiff.cpp  autodiff.hpp  main.cpp  optim.hpp  propagate.hpp  tensor.hpp  util.h  util.hpp  variable.hpp
